--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -19,8 +19,12 @@ ASTRIA_SEQUENCER_RELAYER_GAS_LIMIT=1000000
 # requesting a new block from sequencer.
 ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME=1000
 
+# Set to true to only relay blocks proposed by the validator key in `ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE`.
+ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
+
 # The path to the file storing the cometbft validator key.
 # Used to sign data before submitting it to celestia.
+# Ignored if `ASTRIA_SEQUENCER_RELAYER_DISABLE_RELAY_ALL=false`.
 ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE=.cometbft/config/priv_validator_key.json
 
 # The port that sequencer relayer will bind on 127.0.0.1 to serve RPCs.
