--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -16,6 +16,7 @@ borsh = "0.10.3"
 matchit = "0.7.2"
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.61.0" }
 penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.61.0" }
+once_cell = "1.18"
 tower = "0.4"
 tower-abci = "0.10.0"
 tower-actor = "0.1.0"
