--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -14,10 +14,11 @@ sequencer_types = { package = "astria-sequencer-types", path = "../astria-sequen
 anyhow = "1"
 borsh = "0.10.3"
 matchit = "0.7.2"
-penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.61.0" }
-penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.61.0" }
+penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "4f479272c6acc3f072108bac88fc0d416d5d0024", features = [ "default", "rpc" ] }
+penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "4f479272c6acc3f072108bac88fc0d416d5d0024" }
+penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "4f479272c6acc3f072108bac88fc0d416d5d0024" }
 tower = "0.4"
-tower-abci = "0.10.0"
+tower-abci = "0.11.0"
 tower-actor = "0.1.0"
 
 async-trait = { workspace = true }
