--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -15,11 +15,6 @@ anyhow = "1"
 borsh = "0.10.3"
 matchit = "0.7.2"
 ibc-types = { version = "0.7.0", features = ["with_serde"] }
-penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
-penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
-penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
-penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
-penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
 tower = "0.4"
 tower-abci = "0.11.0"
 tower-actor = "0.1.0"
@@ -29,6 +24,11 @@ bytes = { workspace = true }
 ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
+penumbra-component = { workspace = true }
+penumbra-ibc = { workspace = true }
+penumbra-proto = { workspace = true }
+penumbra-storage = { workspace = true }
+penumbra-tower-trace = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
