add config option for grpc addr

--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -12,3 +12,6 @@ ASTRIA_SEQUENCER_DB_FILEPATH="/tmp/astria_db"
 # Set to true to enable the mint component
 # Only used if the "mint" feature is enabled
 ASTRIA_SEQUENCER_ENABLE_MINT=false
+
+# Socket address for gRPC server
+ASTRIA_SEQUENCER_GRPC_ADDR="127.0.0.1:8080"
