--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -32,9 +32,9 @@ tendermint-rpc = { workspace = true, features = ["http-client"] }
 tracing = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
+astria-core = { path = "../astria-core" }
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 config = { package = "astria-config", path = "../astria-config" }
-proto = { package = "astria-proto", path = "../astria-proto" }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
 ] }
@@ -45,11 +45,8 @@ celestia-mock = { package = "astria-celestia-mock", path = "../astria-celestia-m
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
+astria-core = { path = "../astria-core", features = ["test-utils"] }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-proto = { package = "astria-proto", path = "../astria-proto", features = [
-  "test-utils",
-] }
-
 rand_core = { version = "0.6", features = ["getrandom"] }
 
 jsonrpsee = { workspace = true, features = ["server"] }
