--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 rust-version = "1.73.0"
 
 [dependencies]
+"astria-core" = { path = "../astria-core" }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-proto = { package = "astria-proto", path = "../astria-proto" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 sequencer_types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
 
