--- a/crates/sequencer-types/Cargo.toml
+++ b/crates/sequencer-types/Cargo.toml
@@ -16,12 +16,8 @@ tendermint-proto = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
-merkle = { package = "astria-merkle", path = "../merkle", features = [
-  "serde",
-] }
-proto = { package = "astria-proto", path = "../proto", features = [
-  "serde",
-] }
+merkle = { package = "astria-merkle", path = "../merkle", features = ["serde"] }
+proto = { package = "astria-proto", path = "../proto", features = ["serde"] }
 
 ed25519-consensus = { workspace = true, optional = true }
 rand = { workspace = true, optional = true }
