--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -40,9 +40,7 @@ tokio = { workspace = true, features = ["rt", "tracing"] }
 tracing = { workspace = true }
 
 [dev-dependencies]
-config = { package = "astria-config", path = "../config", features = [
-  "tests",
-] }
+config = { package = "astria-config", path = "../config", features = ["tests"] }
 
 [features]
 default = []
