refactor: unify construction of cometbft blocks in tests (#640)
## Summary
Move test cometbft block construction to astria-proto, unify across
tests

## Changes
- Move create_tendermint_block to astria-proto and rename to
make_cometbft_block
- Allow configuring the block via a new `ConfigureCometBftBlock` type

## Testing
This is to set up tests by creating valid cometbft blocks. The tests
still run.

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -46,7 +46,7 @@ config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types", features = [
+proto = { package = "astria-proto", path = "../astria-proto", features = [
   "test-utils",
 ] }
 
