--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -24,10 +24,10 @@ ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 ibc-types = { workspace = true, features = ["with_serde"] }
-penumbra-component = { workspace = true }
+cnidarium = { workspace = true }
+cnidarium-component = { workspace = true }
 penumbra-ibc = { workspace = true, features = ["component"] }
 penumbra-proto = { workspace = true }
-penumbra-storage = { workspace = true }
 penumbra-tower-trace = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
