--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -40,7 +40,7 @@ tendermint = { workspace = true }
 tokio = { workspace = true, features = ["rt", "tracing"] }
 tracing = { workspace = true }
 
-ibc-proto = { version = "0.37.0", default-features = false }
+ibc-proto = { version = "0.39.0", features = ["server"] }
 tonic = "0.10"
 tower-http = { version = "0.4", features = ["cors"] }
 
