--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -17,6 +17,8 @@ matchit = "0.7.2"
 tower = "0.4"
 tower-abci = "0.11.0"
 tower-actor = "0.1.0"
+cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
+cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
@@ -24,10 +26,8 @@ ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 ibc-types = { workspace = true, features = ["with_serde"] }
-penumbra-component = { workspace = true }
 penumbra-ibc = { workspace = true, features = ["component"] }
 penumbra-proto = { workspace = true }
-penumbra-storage = { workspace = true }
 penumbra-tower-trace = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
