--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -26,7 +26,7 @@ ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 ibc-types = { workspace = true, features = ["with_serde"] }
-penumbra-ibc = { workspace = true, features = ["component"] }
+penumbra-ibc = { workspace = true, features = ["component", "rpc"] }
 penumbra-proto = { workspace = true }
 penumbra-tower-trace = { workspace = true }
 prost = { workspace = true }
@@ -38,6 +38,10 @@ tendermint-proto = { workspace = true }
 tendermint = { workspace = true }
 tokio = { workspace = true, features = ["rt", "tracing"] }
 tracing = { workspace = true }
+
+ibc-proto = { version = "0.39.0", features = ["server"] }
+tonic = "0.10"
+tower-http = { version = "0.4", features = ["cors"] }
 
 [dev-dependencies]
 config = { package = "astria-config", path = "../astria-config", features = [
