feat(sequencer)!: use `IbcComponent` and penumbra `HostInterface`  (#700)
## Summary
need to set specific state keys on `InitChain` and `BeginBlock` for the
IBC impl to work.

also uses the `HostInterface` implemented here:
https://github.com/penumbra-zone/penumbra/pull/3598 needed so that the
IBC impl can access astria-specific state keys.

## Background
as above

## Changes
- use the penumbra `IBCComponent` within our app, which deals with the
required IBC state
- implement `HostInterface` for `AstriaHost` 

## Testing
with hermes (see
https://www.notion.so/astria-org/IBC-setup-local-between-Astria-and-Celestia-4cfea753490e4a7f85833e9b3f629ccb?pvs=4)

## Breaking Changelist
this updates the values in storage (adds `chain_id`)

## Related Issues

closes #650 (not exactly related but closing anyways, don't need to
explicitly bind `transfer` ports as this is checked in the penumbra IBC
implementation (`PortId::transfer()`))

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -16,8 +16,8 @@ matchit = "0.7.2"
 tower = "0.4"
 tower-abci = "0.11.0"
 tower-actor = "0.1.0"
-cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
-cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
+cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea" }
+cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea" }
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
@@ -38,7 +38,7 @@ tendermint = { workspace = true }
 tokio = { workspace = true, features = ["rt", "tracing"] }
 tracing = { workspace = true }
 
-ibc-proto = { version = "0.39.0", features = ["server"] }
+ibc-proto = { version = "0.40.0", features = ["server"] }
 tonic = "0.10"
 tower-http = { version = "0.4", features = ["cors"] }
 
