--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -29,3 +29,7 @@ ASTRIA_SEQUENCER_RELAYER_RPC_PORT=2450
 
 # A list of filter directives of the form target[span{field=value}]=level.
 ASTRIA_SEQUENCER_RELAYER_LOG=astria_sequencer_relayer=info
+
+ASTRIA_SEQUENCER_RELAYER_METRICS_ENABLED=true
+
+ASTRIA_SEQUENCER_RELAYER_PROMETHEUS_HTTP_LISTENER_ADDR=0.0.0.0:9000
