--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -30,6 +30,8 @@ ASTRIA_SEQUENCER_RELAYER_RPC_PORT=2450
 # A list of filter directives of the form target[span{field=value}]=level.
 ASTRIA_SEQUENCER_RELAYER_LOG=astria_sequencer_relayer=info
 
-ASTRIA_SEQUENCER_RELAYER_METRICS_ENABLED=true
+# Set to true to enable prometheus metrics.
+ASTRIA_SEQUENCER_RELAYER_METRICS_ENABLED=false
 
-ASTRIA_SEQUENCER_RELAYER_PROMETHEUS_HTTP_LISTENER_ADDR=0.0.0.0:9000
+# The address at which the prometheus HTTP listener will bind if enabled.
+ASTRIA_SEQUENCER_RELAYER_PROMETHEUS_HTTP_LISTENER_ADDR="127.0.0.1:9000"
