--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -15,3 +15,9 @@ ASTRIA_SEQUENCER_ENABLE_MINT=false
 
 # Socket address for gRPC server
 ASTRIA_SEQUENCER_GRPC_ADDR="127.0.0.1:8080"
+
+# Set to true to enable prometheus metrics.
+ASTRIA_SEQUENCER_METRICS_ENABLED=false
+
+# The address at which the prometheus HTTP listener will bind if enabled.
+ASTRIA_SEQUENCER_PROMETHEUS_HTTP_LISTENER_ADDR="127.0.0.1:9000"
