--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.73"
 
+[[bin]]
+name = "astria-sequencer-relayer"
+test = false
+bench = false
+
 [dependencies]
 dirs = "5.0"
 http = "0.2.9"
