--- a/proto/sequencerapis/buf.yaml
+++ b/proto/sequencerapis/buf.yaml
@@ -1,14 +1,12 @@
 version: v1
 name: buf.build/astria/astria
-deps:
-  - buf.build/penumbra-zone/penumbra:bc443669626d4a7b823f588d95c9a528
-  # Provides tendermint/types/types.proto, tendermint/abci/types.proto.
-  # Ensure that this commit matches that used by penumbra-zone/penumbra
-  - buf.build/cosmos/cosmos-sdk:e7a85cef453e4b999ad9aff8714ae05f
 breaking:
   use:
     - FILE
 lint:
+  ignore_only:
+    PACKAGE_VERSION_SUFFIX:
+      - "vendored"
   use:
     - BASIC
     - ENUM_VALUE_PREFIX
