--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -8,6 +8,17 @@ ASTRIA_SEQUENCER_RELAYER_NO_OTEL=false
 # If false span data is written to stdout only if it is connected to a tty.
 ASTRIA_SEQUENCER_RELAYER_FORCE_STDOUT=false
 
+# If true uses an exceedingly pretty human readable format to write to stdout.
+# If false uses JSON formatted OTEL traces.
+# This does nothing unless stdout is connected to a tty or
+# `ASTRIA_SEQUENCER_RELAYER_FORCE_STDOUT` is set to `true`.
+ASTRIA_SEQUENCER_RELAYER_PRETTY_PRINT=false
+
+# If set to any non-empty value removes ANSI escape characters from the pretty
+# printed output. Note that this does nothing unless
+# `ASTRIA_SEQUENCER_RELAYER_PRETTY_PRINT` is set to `true`.
+NO_COLOR=
+
 # Address of sequencer/cometbft/tendermint to request new blocks.
 # 127.0.0.1:26657 is the default socket address at which cometbft
 # serves RPCs.
@@ -52,7 +63,7 @@ OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4317"
 # Sets the OTLP endpoint for trace data. This takes precedence over `OTEL_EXPORTER_OTLP_ENDPOINT` if set.
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317/v1/traces"
 # The duration in seconds that the OTEL exporter will wait for each batch export.
-OTEL_EXPORTER_OTLP_TRACES_TIMEOUT=10,
+OTEL_EXPORTER_OTLP_TRACES_TIMEOUT=10
 # The compression format to use for exporting. Only `"gzip"` is supported.
 # Don't set the env var if no compression is required.
 OTEL_EXPORTER_OTLP_TRACES_COMPRESSION="gzip"
