chore!: upgrade to penumbra release 0.66 (#741)
## Summary
Updates to the newest penumbra release which is being used for their
testnet.

## Background
Penumbra recently upgraded their testnet, and intends to support network
upgrades on their new network. This updates to that version, which
should mean we can provide network upgrades with future penumbra updates
hopefully.

## Changes
- Update to latest penumbra release.
- updated readme around a direction that didn't work for me.

## Testing
Automated tests, manually started up sequencer locally to ensure starts.

## Breaking Changelist
- Upgrades to cnidarium & penumbra are generally breaking changes
- Added IBC params to genesis

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -21,8 +21,8 @@ matchit = "0.7.2"
 tower = "0.4"
 tower-abci = "0.11.0"
 tower-actor = "0.1.0"
-cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea" }
-cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "1b1be7e1373401eaf30d63352ee680991cb42aea" }
+cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.66.0" }
+cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.66.0" }
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
