--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -7,8 +7,13 @@ rust-version = "1.73.0"
 [[bin]]
 name = "astria-sequencer"
 
+[features]
+default = []
+mint = []
+
 [dependencies]
-"astria-core" = { path = "../astria-core" }
+astria-core = { path = "../astria-core" }
+astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
@@ -52,6 +57,5 @@ config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
 
-[features]
-default = []
-mint = []
+[build-dependencies]
+astria-build-info = { path = "../astria-build-info", features = ["build"] }
