--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.9.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.73"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 [[bin]]
 name = "astria-sequencer-relayer"
