--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -2,7 +2,11 @@
 name = "astria-sequencer"
 version = "0.8.0"
 edition = "2021"
-rust-version = "1.73.0"
+license = "MIT OR Apache-2.0"
+rust-version = "1.73"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 [[bin]]
 name = "astria-sequencer"
