--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -48,9 +48,7 @@ tonic = "0.10"
 tower-http = { version = "0.4", features = ["cors"] }
 
 [dev-dependencies]
-config = { package = "astria-config", path = "../config", features = [
-  "tests",
-] }
+config = { package = "astria-config", path = "../config", features = ["tests"] }
 
 [features]
 default = []
