update naming a bit, add http annotations for how these could be REST endpoints

--- a/proto/sequencerapis/buf.yaml
+++ b/proto/sequencerapis/buf.yaml
@@ -3,6 +3,8 @@ name: buf.build/astria/astria
 breaking:
   use:
     - FILE
+deps:
+  - buf.build/googleapis/googleapis
 lint:
   ignore_only:
     PACKAGE_VERSION_SUFFIX:
