feat: print build info in all services (#753)
## Summary
Print build info for all services.

## Background
Astria services emit no build information which means we are potentially
flying blind.

This patch injects various bits of build information using our services'
`build.rs` build scripts and reads them out at compile time. The
injected build information is then printed on stderr immediately after
startup following the convention that informational and debug messages
are not sent to stdout.

The emitted build information is json formatted and looks like so (for
sequencer compiled locally and ran through `jq`. It's not actually
pretty-printed):
```json
{
  "build_timestamp": "2024-02-14T14:13:18.583116000Z",
  "cargo_opt_level": "0",
  "cargo_pkg_name": "astria-sequencer",
  "cargo_target_triple": "aarch64-apple-darwin",
  "git_branch": "superfluffy/version-and-sha-into-services",
  "git_commit_date": "2024-02-14",
  "git_describe": "sequencer-v0.8.0-25-g268bbba",
  "git_sha": "268bbba35155fcf2f218a52afda20557dad8f294",
  "rustc_channel": "stable",
  "rustc_commit_hash": "07dca489ac2d933c78d3c5158e3f43beefeb02ce",
  "rustc_host_triple": "aarch64-apple-darwin"
}
```

## Changes
- Add a new crate `astria-build-info` to emit and inject build
information at compile time
- Update all services to print build info.
- Set the minimum version requirement of `ibc-types` to `0.11.1` because
of conflicts in the version resolution of the `time` dependency (a
mutual dependency of `vergen` and `ibc-types`).

## Testing
Nothing to test as this is fundamentally a thin wrapper around the
functionality provided by the `vergen` crate. All services, composer,
conductor, sequencer, and sequencer-relayer, were executed locally and
observed to emit the expected build info.

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -11,8 +11,13 @@ homepage = "https://astria.org"
 [[bin]]
 name = "astria-sequencer"
 
+[features]
+default = []
+mint = []
+
 [dependencies]
-"astria-core" = { path = "../astria-core" }
+astria-core = { path = "../astria-core" }
+astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
@@ -56,6 +61,5 @@ config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
 
-[features]
-default = []
-mint = []
+[build-dependencies]
+astria-build-info = { path = "../astria-build-info", features = ["build"] }
