--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -9,7 +9,7 @@ copy-env type=default_env:
   cp {{ type }}.env.example .env
 
 run:
-  cargo run
+  ../../target/debug/astria-sequencer
 
 run-cometbft:
   cometbft init
