--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -11,6 +11,9 @@ copy-env type=default_env:
 run:
   cargo run
 
+bin-run:
+    ../../target/debug/astria-sequencer
+
 run-cometbft:
   cometbft init
   ../../target/debug/astria-sequencer-utils --genesis-app-state-file=test-genesis-app-state.json --destination-genesis-file=$HOME/.cometbft/config/genesis.json --chain-id=astria
