--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -12,11 +12,13 @@ run:
   cargo run
 
 bin-run:
-    ../../target/debug/astria-sequencer
+  ../../target/debug/astria-sequencer
 
 run-cometbft:
   cometbft init
-  ../../target/debug/astria-sequencer-utils --genesis-app-state-file=test-genesis-app-state.json --destination-genesis-file=$HOME/.cometbft/config/genesis.json --chain-id=astria
+  # NOTE - these are the development keys and genesis file. matches what is found in dev-cluster.
+  cp ../../scripts/local-configs/priv_validator_key.json ~/.cometbft/config/priv_validator_key.json
+  cp ../../scripts/local-configs/genesis.json ~/.cometbft/config/genesis.json
   sed -i'.bak' 's/timeout_commit = "1s"/timeout_commit = "2s"/g' ~/.cometbft/config/config.toml
   cometbft node
 
