feat(relayer): retry sequencer block fetch, celestia blob submission (#769)
## Summary
Adds retries for fetching blocks from sequencer and submitting blobs to
Celestia. Also refactors state-tracking and simplifies tests.

## Background
Relayer immediately failed when fetching blocks from sequencer or
submitting blobs to Celestia failed, leading to critical loss of data.
This patch adds retry logic to both up to `u32::MAX` times, which is
effectively infinity.

Because very long retries means that the internal block/blob cache can
grow infinitely this patch also adds a backpressure mechanism: if the
task writing blobs to Celestia is congested reading blocks from
Sequencer stops until there is more capacity.

The change also affected how readiness and health are tracked, requiring
a refactor (and simplification) of tests.

## Missing

This patch does not include, leaving to followup PRs:
1. a limiter on the maximum blob size (both individual blobs and across
all blobs submitted in one `blob.Submit` RPC);
2. state-tracking to ensure that already submitted blobs will not be
resubmitted.

## Changes
- Add retry logic to sequencer block fetch
- Add retry logic to celestia blob submission
- Add a backpressure mechanism to halt block fetching if blob submission
is congested
- Refactor status reporting taking the above changes into account
- Rework and simplify tests

## Testing
Reworked and simplified tests to ensure that blobs still arrive.

## Related Issues

closes https://github.com/astriaorg/astria/issues/745

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -13,12 +13,14 @@ name = "astria-sequencer-relayer"
 
 [dependencies]
 dirs = "5.0"
+futures-bounded = "0.2.3"
 http = "0.2.9"
+itoa = "1.0.10"
+pin-project-lite = "0.2"
 serde_path_to_error = "0.1.13"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
 
 axum = { workspace = true }
-backon = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
 ed25519-consensus = { workspace = true }
@@ -35,8 +37,11 @@ sha2 = { workspace = true }
 tendermint = { workspace = true, features = ["rust-crypto"] }
 tendermint-config = { workspace = true }
 tendermint-rpc = { workspace = true, features = ["http-client"] }
+thiserror = { workspace = true }
 tracing = { workspace = true }
+tryhard = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio-util = { workspace = true, features = ["rt"] }
 
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 astria-core = { path = "../astria-core" }
@@ -47,6 +52,7 @@ sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequ
   "http",
 ] }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
+tokio-stream = "0.1.14"
 
 [dev-dependencies]
 celestia-mock = { package = "astria-celestia-mock", path = "../astria-celestia-mock" }
