--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -45,8 +45,8 @@ ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
 # Ignored if `ASTRIA_SEQUENCER_RELAYER_DISABLE_RELAY_ALL=false`.
 ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE=.cometbft/config/priv_validator_key.json
 
-# The port that sequencer relayer will bind on 127.0.0.1 to serve RPCs.
-ASTRIA_SEQUENCER_RELAYER_RPC_PORT=2450
+# The socket address at which sequencer relayer will server healthz, readyz, and status calls.
+ASTRIA_SEQUENCER_RELAYER_API_ADDR=127.0.0.1:2450
 
 # Set to true to enable prometheus metrics.
 ASTRIA_SEQUENCER_RELAYER_NO_METRICS=true
