feat(relayer)!: store (and restart at) submission state

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -48,6 +48,18 @@ ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE=.cometbft/config/priv_validator_key.
 # The socket address at which sequencer relayer will server healthz, readyz, and status calls.
 ASTRIA_SEQUENCER_RELAYER_API_ADDR=127.0.0.1:2450
 
+# The path to which relayer will write its state prior to submitting to Celestia.
+# A file must exist at this path and the file must be readable and writable.
+# The file must either be empty or contain a JSON object that can be read by
+# by Relayer (this is the case if it was written to by sequencer relayer).
+ASTRIA_SEQUENCER_RELAYER_PRESUBMIT_PATH=/path/to/presubmit.json
+
+# The path to which relayer will write its state after submitting to Celestia.
+# A file must exist at this path and the file must be readable and writable.
+# The file must either be empty or contain a JSON object that can be read by
+# by Relayer (this is the case if it was written to by sequencer relayer).
+ASTRIA_SEQUENCER_RELAYER_POSTSUBMIT_PATH=/path/to/postsubmit.json
+
 # Set to true to enable prometheus metrics.
 ASTRIA_SEQUENCER_RELAYER_NO_METRICS=true
 
