allow changes to sequencer unstable

--- a/proto/sequencerapis/buf.yaml
+++ b/proto/sequencerapis/buf.yaml
@@ -6,6 +6,7 @@ breaking:
 deps:
   - buf.build/googleapis/googleapis
 lint:
+  ignore_unstable_packages: true
   ignore_only:
     PACKAGE_VERSION_SUFFIX:
       - "astria_vendored/tendermint"
