--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -25,7 +25,7 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 ] }
 
 anyhow = "1"
-borsh = "0.10.3"
+borsh = { version = "1", features = ["derive"] }
 matchit = "0.7.2"
 tower = "0.4"
 tower-abci = "0.11.0"
