feat(relayer)!: introduce state to not submit previous sequencer blocks (#778)
## Summary
Adds state to sequencer-relayer to not resubmit sequencer blocks to
Celestia that were already submitted

## Background
At the moment Sequencer-Relayer queries Sequencer for its latest height,
and starts relaying blocks to Celestia starting from that height. This
means two things:
1. A fresh sequencer + sequencer-relayer deployment (such as used in a
local dev cluster) will always miss the first few sequencer blocks.
2. If sequencer-relayer goes down and is restarted the blocks it missed
will never be relayed.

This patch has Sequencer-Relayer write a pre-submit and post-submit
state to disk as part of every blob-submission.

## Changes
- Enforces that sequencer blocks are relayed to Celestia in the order
they are received by the write task (the write task performs no extra
ordering, but since the read stream fetches blocks in sequential order
of their heights this ensures that blocks are relayed ascending height
order).
- Adds environment variables `ASTRIA_SEQUENCER_RELAYER_PRE_SUBMIT_PATH`
and `ASTRIA_SEQUENCER_RELAYER_POST_SUBMIT_PATH` as new configuration
parameters to sequencer relayer:
- files must exist at both paths, be readable and writable, and contain information
  about the previous block submission being successful (see `local.example.env`
  for specifics)
- this is done to force manual intervention if writing either file fails
as part of the submission, and to avoid the need for another config
option in the case of a fresh deployment (which might have complex
interaction with automatic container restarts)
- Has sequencer-relayer read the pre-/post-submit files to determine a
starting height for relaying sequencer heights
- Has sequencer-relayer update pre- and post-submit files as part of
blob submission, failing hard if either returns errors
- 
## Testing
- unit tests for reading/writing pre-/ post-submit states
- a simple b

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -48,6 +48,24 @@ ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE=.cometbft/config/priv_validator_key.
 # The socket address at which sequencer relayer will server healthz, readyz, and status calls.
 ASTRIA_SEQUENCER_RELAYER_API_ADDR=127.0.0.1:2450
 
+# The path to which relayer will write its state prior to submitting to Celestia.
+# A file must exist at this path, be readable and writable, and contain one of:
+# 1. {"state": "ignore"},
+#    to ignore the pre-submit state entirely and only consider the object stored in
+#    ASTRIA_SEQUENCER_RELAYER_POST_SUBMIT_PATH.
+# 2. {"state": "started", "last_submission": <post_submission_state> },
+#    which is usually only written by sequencer-relayer during normal operation and
+#    is checked for consistency with ASTRIA_SEQUENCER_RELAYER_POST_SUBMIT_PATH at startup.
+ASTRIA_SEQUENCER_RELAYER_PRE_SUBMIT_PATH=/path/to/presubmit.json
+
+# The path to which relayer will write its state after submitting to Celestia.
+# A file must exist at this path, be readable and writable, and contain one of:
+# 1. {"state": "fresh"}`,
+#    for relaying sequencer blocks starting at sequencer height 1. 
+# 2. {"state": "submitted", "celestia_height": <number>, "sequencer_height": <number>}}`, 
+#    for relaying blocks starting at `<number> + 1`. 
+ASTRIA_SEQUENCER_RELAYER_POST_SUBMIT_PATH=/path/to/postsubmit.json
+
 # Set to true to enable prometheus metrics.
 ASTRIA_SEQUENCER_RELAYER_NO_METRICS=true
 
