--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -17,9 +17,6 @@ mint = []
 
 [dependencies]
 astria-core = { path = "../astria-core", features = ["server"] }
-sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
-  "http",
-] }
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
@@ -28,7 +25,7 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 ] }
 
 anyhow = "1"
-borsh = "0.10.3"
+borsh = { version = "1", features = ["derive"] }
 matchit = "0.7.2"
 tower = "0.4"
 tower-abci = "0.11.0"
