fix(conductor): update reference celestia height on finished scheduled block exeuction

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -15,7 +15,6 @@ name = "astria-sequencer-relayer"
 dirs = "5.0"
 futures-bounded = "0.2.3"
 http = "0.2.9"
-itoa = "1.0.10"
 pin-project-lite = "0.2"
 serde_path_to_error = "0.1.13"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
@@ -28,6 +27,7 @@ futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
+itoa = { workspace = true }
 metrics = { workspace = true }
 prost = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
