--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -35,15 +35,15 @@ serde_json = { workspace = true }
 sha2 = { workspace = true }
 tendermint = { workspace = true, features = ["rust-crypto"] }
 tendermint-config = { workspace = true }
-tendermint-rpc = { workspace = true, features = ["http-client"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tryhard = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tokio-util = { workspace = true, features = ["rt"] }
+tonic = { workspace = true }
 
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
-astria-core = { path = "../astria-core" }
+astria-core = { path = "../astria-core", features = ["client"] }
 astria-eyre = { path = "../astria-eyre" }
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 config = { package = "astria-config", path = "../astria-config" }
@@ -54,14 +54,16 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 tokio-stream = "0.1.14"
 
 [dev-dependencies]
+async-trait = { workspace = true }
 celestia-mock = { package = "astria-celestia-mock", path = "../astria-celestia-mock" }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
-astria-core = { path = "../astria-core", features = ["test-utils"] }
+astria-core = { path = "../astria-core", features = ["test-utils", "server"] }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 rand_core = { version = "0.6", features = ["getrandom"] }
 reqwest = { workspace = true, features = ["json"] }
+tendermint-rpc = { workspace = true, features = ["http-client"] }
 
 jsonrpsee = { workspace = true, features = ["server"] }
 once_cell = { workspace = true }
